@@ -24,9 +24,10 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 #ifndef INCL_ITEMS
 #define INCL_ITEMS 1
-#include <fstream.h>
 
-extern char *item_names[1024];		// The game items' names.
+class ifstream;
+
+extern char **item_names;		// The game items' names.
 
 void Setup_item_names (ifstream& items);
 
